# nesom

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  fix_data.py  pyproject.toml  requirements.txt  seed.py  sync_db.py
backend/alembic/: env.py
backend/src/: main.py
backend/src/api/v1/: __init__.py
backend/src/core/: config.py  exceptions.py  middleware.py  security.py
backend/src/database/: session.py
backend/src/modules/auth/: audit.py  audit_router.py  audit_schemas.py  audit_service.py  auth_router.py  auth_service.py  models.py  router.py  schemas.py  service.py  user_router.py  user_service.py
backend/src/modules/device/: __init__.py  models.py  router.py  schemas.py  service.py  tasks.py  websocket.py
backend/src/modules/inspection/: __init__.py  mobile_router.py  mobile_schemas.py  models.py  router.py  schemas.py  service.py
backend/src/modules/integration/: __init__.py  router.py  schemas.py  service.py
backend/src/modules/report/: __init__.py  models.py  router.py  schemas.py  service.py  tasks.py
backend/src/modules/sparepart/: alert_service.py  inventory_models.py  inventory_router.py  inventory_schemas.py  inventory_service.py  models.py  (+3 more)
backend/src/shared/: schemas.py
backend/src/worker/: celery_app.py  tasks.py
backend/tests/: test_audit_log.py  test_auth_service.py  test_device_offline_detection.py  test_health.py  test_integration_e2e.py  test_jwt_token_rotation_property.py  test_roles_permissions.py  test_sparepart_service.py  test_user_service.py  test_workorder_state_machine.py
(+119 files in other folders)
